@@ -82,7 +82,7 @@ import sun.util.logging.PlatformLogger;
  *   <li>
  *     Currently, only CookieStore.add(URI, HttpCookie) and CookieStore.get(URI)
  *     are used by CookieManager. Others are for completeness and might be needed
- *     by a more sophisticated CookieStore implementation, e.g. a NetscapeCookieStore.
+ *     by a more sophisticated CookieStore implementation, e.g. a NetscapeCookieSotre.
  *   </li>
  * </ul>
  * </blockquote>
@@ -202,12 +202,14 @@ public class CookieManager extends CookieHandler
             throw new IllegalArgumentException("Argument is null");
         }
 
+        Map<String, List<String>> cookieMap =
+                        new java.util.HashMap<String, List<String>>();
         // if there's no default CookieStore, no way for us to get any cookie
         if (cookieJar == null)
-            return Map.of();
+            return Collections.unmodifiableMap(cookieMap);
 
         boolean secureLink = "https".equalsIgnoreCase(uri.getScheme());
-        List<HttpCookie> cookies = new java.util.ArrayList<>();
+        List<HttpCookie> cookies = new java.util.ArrayList<HttpCookie>();
         // BEGIN Android-removed: The logic of converting null path is moved into pathMatches.
         /*
         String path = uri.getPath();
@@ -256,7 +258,8 @@ public class CookieManager extends CookieHandler
         // apply sort rule (RFC 2965 sec. 3.3.4)
         List<String> cookieHeader = sortByPath(cookies);
 
-        return Map.of("Cookie", cookieHeader);
+        cookieMap.put("Cookie", cookieHeader);
+        return Collections.unmodifiableMap(cookieMap);
     }
 
     public void
@@ -304,7 +307,7 @@ public class CookieManager extends CookieHandler
                             // the path is the directory of the page/doc
                             String path = uri.getPath();
                             if (!path.endsWith("/")) {
-                                int i = path.lastIndexOf('/');
+                                int i = path.lastIndexOf("/");
                                 if (i > 0) {
                                     path = path.substring(0, i + 1);
                                 } else {
@@ -379,8 +382,8 @@ public class CookieManager extends CookieHandler
     }
 
 
-    private static boolean isInPortList(String lst, int port) {
-        int i = lst.indexOf(',');
+    static private boolean isInPortList(String lst, int port) {
+        int i = lst.indexOf(",");
         int val = -1;
         while (i > 0) {
             try {
@@ -391,7 +394,7 @@ public class CookieManager extends CookieHandler
             } catch (NumberFormatException numberFormatException) {
             }
             lst = lst.substring(i+1);
-            i = lst.indexOf(',');
+            i = lst.indexOf(",");
         }
         if (!lst.isEmpty()) {
             try {
@@ -456,7 +459,7 @@ public class CookieManager extends CookieHandler
             result.append(cookies.get(i).toString());
         }
 
-        List<String> cookieHeader = new java.util.ArrayList<>();
+        List<String> cookieHeader = new java.util.ArrayList<String>();
         cookieHeader.add(result.toString());
         // END Android-changed: Cookie header differs in Netscape cookie spec and RFC 2965.
         return cookieHeader;
